examples/invalid/syntaxErr/basic/bgnErr.wacc
# begin token typo
# Output:
# #syntax error#

#Program:#

bgn skip end
